# ledger

./: .gitignore  BACKUP_GUIDE.md  DEV_GUIDE.md  Dockerfile  README.md  config.py  dev.py  docker-compose.yml  env.example  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 20251026_0028_5be9eae5b608_initial_schema.py  20251026_1101_60b56fe97635_add_reimbursement_category.py  20251026_1106_c69d74133aab_add_preferred_report_currency_to_users.py  20251026_1327_e5f449cc5f34_add_user_categories_support.py  20251026_1416_b2524aad6a65_add_debts_table.py
bot/: states.py
bot/handlers/: __init__.py  categories.py  create_debt.py  debts.py  expenses.py  history.py  income.py  reports.py  split_bill.py  start.py
bot/keyboards/: __init__.py  category.py  category_management.py  create_debt.py  currency.py  history.py  split_bill.py
bot/middlewares/: __init__.py  db.py
bot/services/: __init__.py  category_service.py  debt_service.py  transaction_service.py  user_service.py
bot/tasks/: __init__.py  backup_tasks.py
bot/utils/: __init__.py  commands.py  date_parser.py
core/: config.py  db.py  fx_rates.py
models/: __init__.py  categories.py  debts.py  fx_rates.py  transactions.py  users.py
scripts/: __init__.py  backup.py  restore.py
