[project]
name = "finance-tg-bot"
version = "0.1.0"
description = "Personal Finance Telegram Bot with multi-currency support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13.0,<4.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "asyncpg>=0.29.0,<0.30.0",
    "greenlet>=3.0.0,<4.0.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.11.0",
    "httpx>=0.27.0,<0.28.0",
    "redis>=5.0.0,<6.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "watchfiles>=0.21.0,<0.22.0",
    "loguru>=0.7.3",
    "boto3>=1.34.0,<2.0.0",
    "apscheduler>=3.10.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "poethepoet>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.hatch.build.targets.wheel]
packages = ["bot", "core", "models"]

[tool.poe.tasks]
up = { shell = "docker-compose up -d", help = "Start all services" }
down = { shell = "docker-compose down", help = "Stop all services" }
restart = { shell = "docker-compose restart", help = "Restart all services" }
logs = { shell = "docker-compose logs -f bot", help = "Show bot logs" }
migrate = { shell = "docker-compose exec -T bot alembic upgrade head", help = "Run database migrations" }
shell = { shell = "docker-compose exec postgres psql -U finance_user -d finance_bot", help = "Open PostgreSQL shell" }
test = { shell = "docker-compose exec bot pytest", help = "Run tests" }
clean = { shell = "docker-compose down -v && rm -rf __pycache__ .pytest_cache", help = "Remove volumes and containers" }
dev = { shell = "uv run python dev.py", help = "Run bot locally with hot-reload (for development)" }
dev-debug = { shell = "uv run python main.py", help = "Run bot locally without reload (for debugging)" }
format = { shell = "black . && ruff check --fix .", help = "Format code with black and ruff" }
backup = { shell = "uv run python scripts/backup.py", help = "Create database backup" }
restore = { shell = "uv run python scripts/restore.py", help = "Restore database from backup" }
backup-list = { shell = "ls -lh backups/", help = "List all backups" }
